<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatiereFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:padding="18dp"
            android:gravity="start">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:text="@string/matiere_identifiant"/>

            <EditText
                android:id="@+id/matiere_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:padding="18dp"
            android:gravity="start">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:text="@string/matiere_libelle"/>

            <EditText
                android:id="@+id/matiere_libelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:padding="18dp"
            android:gravity="start">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:layout_gravity="center"
                android:text="@string/label_type_matiere"/>

            <RadioGroup
                android:id="@+id/r_group_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_facultatif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_facultatif"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_obligatoire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_obligatoire"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:padding="18dp"
            android:gravity="start">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:text="@string/label_enseignant"/>

            <Spinner
                android:id="@+id/enseignant_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:padding="18dp"
            android:gravity="start">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:text="@string/label_image"/>

            <Spinner
                android:id="@+id/image_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_enregistrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/label_enregistrer"
                android:textSize="16sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_effacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/label_effacer"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_rechercher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/label_rechercher"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
